# tcg-search-scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/onepiece_card_scraper/: __init__.py  __main__.py  database.py  scraper.py  search_tokens.py  storage.py
tests/: test_database.py  test_scraper.py  test_search_tokens.py  test_storage.py
